# tiny-rtree

./: .gitignore  CMakeLists.txt  README.md  autortree.py  compile.sh  tree.jnlp.spec  tree.jnlp.spec.cxx
benchmark/: CMakeLists.txt  README.md  output.csv  plot.py  run.sh  trtree_benchmark
benchmark/geometry/: README.md  geom.py  utils.py
benchmark/geometry/shapefile/: README.md
benchmark/geometry/shapefile/search-rectangles/: retangulo_maior.shp  retangulo_maior.shx
benchmark/geometry/synthetic_rectangle/: README.md
benchmark/tests/: helper.hpp  insert.hpp  real_insert.hpp  real_search.hpp  search.hpp  suite.cpp  synthetic_insert.hpp
benchmark/visual_profiler/: README.md  search.py
rtree/: SplitStrategy.hpp  geometry.cpp  geometry.hpp  main.cpp  rtree.cpp  rtree.hpp  split.hpp  tiny.cpp  tiny.hpp  tree.cpp  tree.hpp
